hometask review1 fixed left heading's x alignment,lifted the footer links up,changed the button to link

--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+}
 #head{
     width: 70%;
     margin: auto;
     display: flex;
     justify-content: space-between;
+    ;
 
 }
 #navbar{
@@ -10,6 +15,7 @@
     display:flex;
     gap: 50px;
     margin-top: 25px;
+    ;
 }
 ul li a{
     text-decoration: none;
@@ -19,16 +25,22 @@ ul li a{
     background-color: red;
     width: 100%;
     height: 100px;
+    ;
 }
 .strip h1{
     color: #f9dbda;
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 15%;
     line-height: 55px;
+    ;
 }
 .vnavbar{
-        width: 15%;
-        margin-left: 15%;
+    width: 15%;
+    margin-left: 15%;
+    padding-top: 2%;
+}
+.vnavbar ul{
+    padding: 0;
 }
 #navcolumn{
     color: red;
@@ -44,17 +56,19 @@ ul li a{
     font-family: Arial, Helvetica, sans-serif;
     width: 55%;
     line-height: 0.7cm;
+    padding: 2%;
 }
 h2{
     color: darkred;
     font-family: arial;
 }
-.article h3{
-    border: 2px solid gray;
-    padding: 5px;
-    width: fit-content;
-    background-color: lightgray;
+.button {
+    background:#eee;
+    border: 1px solid #ccc;
+    font-size: 120%;
+    text-decoration: none;
     color: black;
+    padding: 3px;
 }
 .strip2{
     background-color: pink;
@@ -71,9 +85,9 @@ h2{
 footer{
     display: flex;
     justify-content: center;
+    margin-bottom: 3%;
 }
 footer a{
     color: red;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
 }
